--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -492,3 +492,23 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
   url={https://www.sciencedirect.com/science/article/pii/S0968432817303037}
 }
 
+
+@article{hoshman2002,
+  doi = {10.48550/ARXIV.COND-MAT/0204492},
+  
+  url = {https://arxiv.org/abs/cond-mat/0204492},
+  
+  author = {Malarz, K. and Kaczanowska, S. and Kulakowski, K.},
+  
+  keywords = {Condensed Matter (cond-mat), Chaotic Dynamics (nlin.CD), FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = {Chaotic Dynamics of Forest Fires},
+  
+  publisher = {arXiv},
+  
+  year = {2002},
+  
+  copyright = {Assumed arXiv.org perpetual, non-exclusive license to distribute this article for submissions made before January 2004}
+}
+
+
