--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -4,16 +4,16 @@
 \begin{tabular}{|l|cc|c|cc|c|c|l|}
 \hline
 \multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Reference}}                                              & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Segmentation\\ Approach\end{tabular}}}                      & \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Counting\\ Approach\end{tabular}}                                        & \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Image\\ Size\end{tabular}} & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Segmentation\\ Accuracy\end{tabular}}} & \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Counting\\ Accuracy\end{tabular}} & \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Dataset\\ Size\end{tabular}} & \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Dataset\\ Name\end{tabular}} & \textbf{Targeted Cells} \\ \hline
-\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Kimbahune\\ et al. \textsuperscript{\cite{kimbahune2011blood}}\end{tabular}}                   & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}PCNN}                                                                                          & \cellcolor[HTML]{FFFFFF}Square tracing method                                                                                       & \cellcolor[HTML]{FFFFFF}N/A                                                           & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}N/A}                                                                      & \cellcolor[HTML]{FFFFFF}N/A                                                                  & \cellcolor[HTML]{FFFFFF}N/A                                                             & \cellcolor[HTML]{FFFFFF}N/A                                                             & Red/White/Platelets     \\ \hline
-\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Guiliang, FENG\\ et al. \textsuperscript{\cite{guiliang2016microscopic}}\end{tabular}}              & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}Discrete Cosine Transform (DCT)}                                                                                                                                                                                                     & \cellcolor[HTML]{FFFFFF}N/A                                                           & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}90\%}                                                                                                                                                                    & \cellcolor[HTML]{FFFFFF}N/A                                                             & \cellcolor[HTML]{FFFFFF}N/A                                                             & Red/White/Platelets     \\ \hline
-\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Bhavnani\\ et al. \textsuperscript{\cite{bhavnani2016segmentation}}\end{tabular}}                    & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}OTsu's thresholding \\ and morphological\\ operations\end{tabular}} & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}1-Circular Hough\\ Transform\\ 2-Watershed Algorithm\end{tabular}                & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular} & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}1- 92.67\%\\ 2- 91.07\%\end{tabular}}                                                                                                         & \cellcolor[HTML]{FFFFFF}20 / 108                                                        & \cellcolor[HTML]{FFFFFF}ALLIDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                          & Red/White               \\ \hline
-\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Carlos\\ et al. \textsuperscript{\cite{DBLP:journals/corr/abs-1802-10548}}\end{tabular}}                      & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}FPN combined with VGG style\\ neural network\end{tabular}}                                                                                                                                                & \cellcolor[HTML]{FFFFFF}256x196                                                       & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}95\%}                                                                                                                                                                    & \cellcolor[HTML]{FFFFFF}80 / 20                                                         & \cellcolor[HTML]{FFFFFF}BBBC005                                                         & counts the total number \\ \hline
-\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Tran, Thanh \\ and\\ Minh et al. \textsuperscript{\cite{tran2019blood}}\end{tabular}}     & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}SegNet with weights\\ from a pre-trained\\ VGG-16\end{tabular}}     & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Distance Transform\\ and connected\\ component labeling\\ algorithm\end{tabular} & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}360x480x3\\ (RGB)\end{tabular}     & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}98.5\%}                                                                   & \cellcolor[HTML]{FFFFFF}97.29\%                                                              & \cellcolor[HTML]{FFFFFF}380 / 32                                                        & \cellcolor[HTML]{FFFFFF}ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                       & Red/White               \\ \hline
-\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}K. Sudha and\\ P. Geetha \textsuperscript{\cite{SUDHA2020639}}\end{tabular}}             & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Edge strength-based\\ Grabcut\end{tabular}}                         & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Gradient Circular\\ Hough Transform\end{tabular}                                 & \cellcolor[HTML]{FFFFFF}256x256                                                       & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}99.32\%}                                                                  & \cellcolor[HTML]{FFFFFF}97.3\%                                                               & \cellcolor[HTML]{FFFFFF}1210                                                            & \cellcolor[HTML]{FFFFFF}ALL-IDB1  \textsuperscript{\cite{pm77-2n23-20}}                                                         & White                   \\ \hline
-\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong\\ et al. \textsuperscript{\cite{Kong:20}}\end{tabular}}                    & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Two parallel\\ modified U-Nets\end{tabular}}                        & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Seed Guided Water-\\ Mesh Algorithm\end{tabular}                                 & \cellcolor[HTML]{FFFFFF}224x224                                                       & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}96\%}                                                                                                                                                                    & \cellcolor[HTML]{FFFFFF}3310 / 1050                                                     & \cellcolor[HTML]{FFFFFF}Self Annotated                                                  & counts the total number \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Shahzad \\ et al. \textsuperscript{\cite{shahzad2020robust}}\end{tabular}}                                            & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Custom encoder-decoder\\ framework with VGG-16\end{tabular}}                                & N/A                                                                                                                                 & \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular}                         & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}97.45\%\\ 93.34\%\end{tabular}}                                        & N/A                                                                                          & 108                                                                                     & ALL-IDB1                                                                                & Red/White/Platelets     \\ \hline
-\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Overton, Toyah\\ and\\ Tucker, Allan \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}}\end{tabular}} & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}DO-U-Net}                                                                                      & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Marching Squares\\ Algorithm\end{tabular}                                        & \cellcolor[HTML]{FFFFFF}188x188                                                       & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%}                                                                                                                                                                 & \cellcolor[HTML]{FFFFFF}10 / 5                                                          & \cellcolor[HTML]{FFFFFF}ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                       & Red                     \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Li, Dongming\\ et al. \textsuperscript{\cite{li2021robust}}\end{tabular}}                                        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Neural Ordinary \\ Differential \\ Equations (NODEs) \\ with U-Net networks\end{tabular}}   & N/A                                                                                                                                 & 256x256                                                                               & \multicolumn{1}{c|}{95.3\%}                                                                                           & N/A                                                                                          & 800                                                                                     & MISP\textsuperscript{\cite{sarrafzadeh2014selection}}                                                                                    & White                   \\ \hline
+\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Kimbahune\\ et al. (2011) \textsuperscript{\cite{kimbahune2011blood}}\end{tabular}}                   & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}PCNN}                                                                                          & \cellcolor[HTML]{FFFFFF}Square tracing method                                                                                       & \cellcolor[HTML]{FFFFFF}N/A                                                           & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}N/A}                                                                      & \cellcolor[HTML]{FFFFFF}N/A                                                                  & \cellcolor[HTML]{FFFFFF}N/A                                                             & \cellcolor[HTML]{FFFFFF}N/A                                                             & Red/White/Platelets     \\ \hline
+\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Guiliang, FENG\\ et al. (2016) \textsuperscript{\cite{guiliang2016microscopic}}\end{tabular}}              & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}Discrete Cosine Transform (DCT)}                                                                                                                                                                                                     & \cellcolor[HTML]{FFFFFF}N/A                                                           & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}90\%}                                                                                                                                                                    & \cellcolor[HTML]{FFFFFF}N/A                                                             & \cellcolor[HTML]{FFFFFF}N/A                                                             & Red/White/Platelets     \\ \hline
+\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Bhavnani\\ et al. (2016) \textsuperscript{\cite{bhavnani2016segmentation}}\end{tabular}}                    & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}OTsu's thresholding \\ and morphological\\ operations\end{tabular}} & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}1-Circular Hough\\ Transform\\ 2-Watershed Algorithm\end{tabular}                & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular} & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}1- 92.67\%\\ 2- 91.07\%\end{tabular}}                                                                                                         & \cellcolor[HTML]{FFFFFF}20 / 108                                                        & \cellcolor[HTML]{FFFFFF}ALLIDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                          & Red/White               \\ \hline
+\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Carlos\\ et al. (2018) \textsuperscript{\cite{DBLP:journals/corr/abs-1802-10548}}\end{tabular}}                      & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}FPN combined with VGG style\\ neural network\end{tabular}}                                                                                                                                                & \cellcolor[HTML]{FFFFFF}256x196                                                       & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}95\%}                                                                                                                                                                    & \cellcolor[HTML]{FFFFFF}80 / 20                                                         & \cellcolor[HTML]{FFFFFF}BBBC005                                                         & counts the total number \\ \hline
+\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Tran, Thanh \\ and\\ Minh et al. (2019) \textsuperscript{\cite{tran2019blood}}\end{tabular}}     & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}SegNet with weights\\ from a pre-trained\\ VGG-16\end{tabular}}     & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Distance Transform\\ and connected\\ component labeling\\ algorithm\end{tabular} & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}360x480x3\\ (RGB)\end{tabular}     & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}98.5\%}                                                                   & \cellcolor[HTML]{FFFFFF}97.29\%                                                              & \cellcolor[HTML]{FFFFFF}380 / 32                                                        & \cellcolor[HTML]{FFFFFF}ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                       & Red/White               \\ \hline
+\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}K. Sudha and\\ P. Geetha (2020) \textsuperscript{\cite{SUDHA2020639}}\end{tabular}}             & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Edge strength-based\\ Grabcut\end{tabular}}                         & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Gradient Circular\\ Hough Transform\end{tabular}                                 & \cellcolor[HTML]{FFFFFF}256x256                                                       & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}99.32\%}                                                                  & \cellcolor[HTML]{FFFFFF}97.3\%                                                               & \cellcolor[HTML]{FFFFFF}1210                                                            & \cellcolor[HTML]{FFFFFF}ALL-IDB1  \textsuperscript{\cite{pm77-2n23-20}}                                                         & White                   \\ \hline
+\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong\\ et al. (2020) \textsuperscript{\cite{Kong:20}}\end{tabular}}                    & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Two parallel\\ modified U-Nets\end{tabular}}                        & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Seed Guided Water-\\ Mesh Algorithm\end{tabular}                                 & \cellcolor[HTML]{FFFFFF}224x224                                                       & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}96\%}                                                                                                                                                                    & \cellcolor[HTML]{FFFFFF}3310 / 1050                                                     & \cellcolor[HTML]{FFFFFF}Self Annotated                                                  & counts the total number \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Shahzad \\ et al. (2020) \textsuperscript{\cite{shahzad2020robust}}\end{tabular}}                                            & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Custom encoder-decoder\\ framework with VGG-16\end{tabular}}                                & N/A                                                                                                                                 & \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular}                         & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}97.45\%\\ 93.34\%\end{tabular}}                                        & N/A                                                                                          & 108                                                                                     & ALL-IDB1                                                                                & Red/White/Platelets     \\ \hline
+\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Overton, Toyah\\ and\\ Tucker, Allan (2020) \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}}\end{tabular}} & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}DO-U-Net}                                                                                      & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Marching Squares\\ Algorithm\end{tabular}                                        & \cellcolor[HTML]{FFFFFF}188x188                                                       & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%}                                                                                                                                                                 & \cellcolor[HTML]{FFFFFF}10 / 5                                                          & \cellcolor[HTML]{FFFFFF}ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                       & Red                     \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Li, Dongming\\ et al. (2021) \textsuperscript{\cite{li2021robust}}\end{tabular}}                                        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Neural Ordinary \\ Differential \\ Equations (NODEs) \\ with U-Net networks\end{tabular}}   & N/A                                                                                                                                 & 256x256                                                                               & \multicolumn{1}{c|}{95.3\%}                                                                                           & N/A                                                                                          & 800                                                                                     & MISP\textsuperscript{\cite{sarrafzadeh2014selection}}                                                                                    & White                   \\ \hline
 \end{tabular}%
 }
 \caption{Table that represents a comparative study of previous methods}
