verified ALL-IDB table and added the all-idb updated version + titlepage

--- a/PFE/latex/chap2.tex
+++ b/PFE/latex/chap2.tex
@@ -36,7 +36,9 @@ The ALL-IDB1 can be used for segmentation or classification with image processin
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=5.8in]{../images/ALLIDB1.jpg}
+\includegraphics[width=5.8in]{../images/ALLIDB1.jpg}segmentation is done using Pulse-Coupled Neural Network (PCNN) and square tracing algorithm for contour tracing after de-noising it with PCNN combined with median filter, the counting is performed by scanning the image and using edge detection methods as square tracing algorithm. this method gave good results compared to state of art methods.\\
+
+
 \caption{Examples of the images contained in ALL-IDB1: healthy cells from non-ALL patients (a,b,c), probable lymphoblasts from ALL patients (d,e,f). }
 \end{figure}
 
@@ -102,6 +104,10 @@ The annotation of ALL-IDB2 is similar to the ALL-IDB1 but with no centroid coord
 \vspace{0.2in}
 
 \input{tables/allidb.tex}
+
+\subsubsection{ALL-IDB1 UPDATED}
+The ALL-IDB1 Database was updated by experts where they added mask annotation for red, white and platelets for all the 108 images.
+The database was obtained from the shahzad paper \textsuperscript{\cite{shahzad2020robust}.
 
 \subsection{Broad Bio-image Benchmark Collection}
 \hspace{\parindent}
