updated allidb table centered vertically!

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -339,9 +339,11 @@ The number 16 in the name VGG refers to the fact that it is 16 layers deep neura
 
 There are a few convolution layers followed by a pooling layer that reduces the height and the width. If we look at the number of filters that we can use, around 64 filters are available that we can double to about 128 and then to 256 filters. In the last layers, we can use 512 filters.
 
+\vspace{0.2in}
+
 \begin{figure}[h]
 \centering
-    \centerline{\includegraphics[width = 4in]{../images/VGG16-architecture.png}}
+    \centerline{\includegraphics[width = 4.5in]{../images/VGG16-architecture.png}}
     \caption{VGG16 architecture}
 \end{figure}
 
