--- a/PFE/latex/chap2.tex
+++ b/PFE/latex/chap2.tex
@@ -107,7 +107,7 @@ The annotation of ALL-IDB2 is similar to the ALL-IDB1 but with no centroid coord
 
 \subsubsection{ALL-IDB1 UPDATED}
 The ALL-IDB1 Database was updated by experts where they added mask annotation for red, white and platelets for all the 108 images.
-The database was obtained from the shahzad paper \textsuperscript{\cite{shahzad2020robust}.
+The database was obtained from the shahzad paper \textsuperscript{\cite{shahzad2020robust}}.
 
 \subsection{Broad Bio-image Benchmark Collection}
 \hspace{\parindent}
