--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -11,7 +11,7 @@
 \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Tran, Thanh \\ and\\ Minh et al. (2019) \textsuperscript{\cite{tran2019blood}}\end{tabular}}     & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}SegNet with weights\\ from a pre-trained\\ VGG-16\end{tabular}}     & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Distance Transform\\ and connected\\ component labeling\\ algorithm\end{tabular} & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}360x480x3\\ (RGB)\end{tabular}     & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}98.5\%}                                                                   & \cellcolor[HTML]{FFFFFF}97.29\%                                                              & \cellcolor[HTML]{FFFFFF}380 / 32                                                        & \cellcolor[HTML]{FFFFFF}ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                       & Red/White               \\ \hline
 \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}K. Sudha and\\ P. Geetha (2020) \textsuperscript{\cite{SUDHA2020639}}\end{tabular}}             & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Edge strength-based\\ Grabcut\end{tabular}}                         & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Gradient Circular\\ Hough Transform\end{tabular}                                 & \cellcolor[HTML]{FFFFFF}256x256                                                       & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}99.32\%}                                                                  & \cellcolor[HTML]{FFFFFF}97.3\%                                                               & \cellcolor[HTML]{FFFFFF}1210                                                            & \cellcolor[HTML]{FFFFFF}ALL-IDB1  \textsuperscript{\cite{pm77-2n23-20}}                                                         & White                   \\ \hline
 \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong\\ et al. (2020) \textsuperscript{\cite{Kong:20}}\end{tabular}}                    & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Two parallel\\ modified U-Nets\end{tabular}}                        & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Seed Guided Water-\\ Mesh Algorithm\end{tabular}                                 & \cellcolor[HTML]{FFFFFF}224x224                                                       & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}96\%}                                                                                                                                                                    & \cellcolor[HTML]{FFFFFF}3310 / 1050                                                     & \cellcolor[HTML]{FFFFFF}Self Annotated                                                  & counts the total number \\ \hline
-\textbf{\begin{tabular}[c]{@{}l@{}}Shahzad \\ et al. (2020) \textsuperscript{\cite{shahzad2020robust}}\end{tabular}}                                            & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Custom encoder-decoder\\ framework with VGG-16\end{tabular}}                                & N/A                                                                                                                                 & \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular}                         & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}97.45\%\\ 93.34\%\end{tabular}}                                        & N/A                                                                                          & 108                                                                                     & ALL-IDB1                                                                                & Red/White/Platelets     \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Shahzad \\ et al. (2020) \textsuperscript{\cite{shahzad2020robust}}\end{tabular}}                                            & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Custom encoder-decoder\\ framework with VGG-16\end{tabular}}                                & N/A                                                                                                                                 & \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular}                         & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}97.45\%\\ 93.34\%\end{tabular}}                                        & N/A                                                                                          & 108                                                                                     & ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                                               & Red/White/Platelets     \\ \hline
 \cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}l@{}}Overton, Toyah\\ and\\ Tucker, Allan (2020) \textsuperscript{\cite{10.1007/978-3-030-44584-3_31}}\end{tabular}} & \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}DO-U-Net}                                                                                      & \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Marching Squares\\ Algorithm\end{tabular}                                        & \cellcolor[HTML]{FFFFFF}188x188                                                       & \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%}                                                                                                                                                                 & \cellcolor[HTML]{FFFFFF}10 / 5                                                          & \cellcolor[HTML]{FFFFFF}ALL-IDB1 \textsuperscript{\cite{pm77-2n23-20}}                                                       & Red                     \\ \hline
 \textbf{\begin{tabular}[c]{@{}l@{}}Li, Dongming\\ et al. (2021) \textsuperscript{\cite{li2021robust}}\end{tabular}}                                        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Neural Ordinary \\ Differential \\ Equations (NODEs) \\ with U-Net networks\end{tabular}}   & N/A                                                                                                                                 & 256x256                                                                               & \multicolumn{1}{c|}{95.3\%}                                                                                           & N/A                                                                                          & 800                                                                                     & MISP\textsuperscript{\cite{sarrafzadeh2014selection}}                                                                                    & White                   \\ \hline
 \end{tabular}%
